--- a/Proyecto 2 Lenguajes/nbproject/private/private.properties
+++ b/Proyecto 2 Lenguajes/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/annuar2203/snap/netbeans/93/build.properties
+user.properties.file=C:\\Users\\Jean Odriozola\\AppData\\Roaming\\NetBeans\\21\\build.properties
